pass data error, currently on display error

--- a/Workshops/WS02/lab.vcxproj.filters
+++ b/Workshops/WS02/lab.vcxproj.filters
@@ -34,7 +34,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="movies.dat">
+    <None Include="employees.csv">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
