--- a/Workshops/WS02/lab.vcxproj
+++ b/Workshops/WS02/lab.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="Employee.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="movies.dat" />
+    <None Include="employees.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
